added pod state control
