# orchestrator/src/main/java/com/cenit/eim/orchestrator/web/GeneralRestController.java
@@ -1,30 +1,33 @@
 package com.cenit.eim.orchestrator.web;
 
+import com.cenit.eim.orchestrator.api.model.ImagePullRequestDto;
+import com.cenit.eim.orchestrator.api.model.ImageStatusResponseDto;
+import com.cenit.eim.orchestrator.api.model.ImageInformationResponseDto;
+import com.cenit.eim.orchestrator.api.model.PodDefinitionDetailsResponseDto;
+import com.cenit.eim.orchestrator.api.model.PodDefinitionCreateRequestDto;
+import com.cenit.eim.orchestrator.api.model.PodDefinitionResponseDto;
 import com.cenit.eim.orchestrator.business.PodService;
 import com.cenit.eim.orchestrator.business.ImageService;
 import com.cenit.eim.orchestrator.business.exception.ImageNotFoundException;
-import com.cenit.eim.orchestrator.model.Pod;
-import org.openapitools.model.ImageInformationResponse;
-import org.openapitools.model.ImagePullRequest;
-import org.openapitools.model.ImageStatusResponse;
-import org.openapitools.model.PodCreateRequest;
-import org.openapitools.model.PodResponse;
+import com.cenit.eim.orchestrator.model.PodDef;
+import com.cenit.eim.orchestrator.api.ImagesApi;
+import com.cenit.eim.orchestrator.api.PodsApi;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
-import org.openapitools.api.ImageApi;
-import org.openapitools.api.ImagesApi;
-import org.openapitools.api.PodsApi;
 import org.springframework.web.context.request.NativeWebRequest;
 
+import javax.transaction.Transactional;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 
 @Controller
-public class GeneralRestController implements ImageApi, ImagesApi, PodsApi {
+/*make it per method*/
+@Transactional
+public class GeneralRestController implements ImagesApi, PodsApi {
 
 
     private final PodService podService;
@@ -37,73 +40,84 @@ public class GeneralRestController implements ImageApi, ImagesApi, PodsApi {
     }
 
     @Override
-    public ResponseEntity<PodResponse> createPod(PodCreateRequest podCreateRequest) {
-        String podId = podService.createPod(podCreateRequest);
-        Pod pod = podService.getPod(podId, false);
+    public ResponseEntity<Void> createPodDefinition(PodDefinitionCreateRequestDto podDefinitionCreateRequestDto) {
+        podService.createPodDefinition(podDefinitionCreateRequestDto);
 
-        PodResponse result = ResponseMapper.toResponse(pod);
+        return new ResponseEntity<>(HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<List<PodDefinitionResponseDto>> getPodDefinitionList(List<String> podDefinitionNames, String podDefinitionNamespace) {
+        if(podDefinitionNames != null && podDefinitionNamespace != null){
+            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+        }
+
+        if(podDefinitionNames == null){
+            podDefinitionNames = new ArrayList<>();
+        }
+        List<PodDef> podDefList = new ArrayList<>();
+
+        if(podDefinitionNames.isEmpty() && podDefinitionNamespace == null){
+            podDefList = podService.getAllPodDefinition();
+        }else
+        if(podDefinitionNames.isEmpty()){
+            podDefList = podService.getPodDefinitionsByNames(podDefinitionNames);
+        }else
+        if(podDefinitionNamespace != null){
+            podDefList = podService.getPodDefinitionsByNamespace(podDefinitionNamespace);
+        }
+
+        List<PodDefinitionResponseDto> result = ResponseMapper.toResponse(podDefList);
 
         return new ResponseEntity<>(result, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<List<PodResponse>> getPodList(List<String> podIds, String podNamespace) {
-        if(podIds != null && podNamespace != null){
+    public ResponseEntity<Void> deletePodDefinition(List<String> podDefinitionNames, String podDefinitionNamespace) {
+        if((podDefinitionNames == null && podDefinitionNamespace == null) ||
+                (podDefinitionNames != null && podDefinitionNamespace != null)){
             return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
         }
-
-        List<Pod> pods = new ArrayList<>();
-        if(podIds == null && podNamespace == null){
-            pods = podService.getAllPods();
-        }
-        if(podIds != null){
-            pods = podService.getPodsById(podIds.toArray(String[]::new));
-        }
-        if(podNamespace != null){
-            pods = podService.getPodsByNamespace(podNamespace);
-        }
-
-        List<PodResponse> result = ResponseMapper.toResponse(pods);
-
-        return new ResponseEntity<>(result, HttpStatus.OK);
-    }
-
-    @Override
-    public ResponseEntity<Void> deletePod(String podId, String podNamespace) {
-        if((podId == null && podNamespace == null) || (podId != null && podNamespace != null)){
-            return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
-        }
-
-        if(podId != null){
-            podService.deletePodById(podId, 1000);
-        }
-        if(podNamespace != null){
-            podService.deletePodByNamespace(podNamespace, 1000);
+        if(podDefinitionNamespace != null){
+            if(podDefinitionNamespace.isEmpty()){
+                return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+            }
+            podService.deletePodDefinitionByNamespace(podDefinitionNamespace);
+        }else if(podDefinitionNames != null){
+            if(podDefinitionNames.isEmpty()){
+                return new ResponseEntity<>(HttpStatus.BAD_REQUEST);
+            }
+            podService.deletePodDefinitionByNames(podDefinitionNames);
         }
 
         return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Override
-    public Optional<NativeWebRequest> getRequest() {
-        return ImageApi.super.getRequest();
-    }
+    public ResponseEntity<PodDefinitionDetailsResponseDto> getPodDefinitionByName(String podDefinitionName) {
+        PodDef pod = podService.getPodDefinitionByName(podDefinitionName);
 
-    @Override
-    public ResponseEntity<ImageStatusResponse> getImageStatus(String id, Map<String, String> annotations, Boolean verbose) {
-        if((id == null || id.isBlank() || id.isEmpty()) && (annotations == null || annotations.isEmpty())){
-            return new ResponseEntity(HttpStatus.BAD_REQUEST);
-        }
-
-        ImageStatusResponse response = ResponseMapper.toResponse(
-                imageService.getImageStatus(id, annotations, verbose)
-        );
+        PodDefinitionDetailsResponseDto response = ResponseMapper.toResponseDetail(pod);
 
         return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<String> pullImage(ImagePullRequest imagePullRequest) {
+    public ResponseEntity<ImageStatusResponseDto> getImageStatus(String imageId, Boolean verbose) {
+        if((imageId == null || imageId.isBlank() || imageId.isEmpty())){
+            return new ResponseEntity(HttpStatus.BAD_REQUEST);
+        }
+
+        ImageStatusResponseDto response = ResponseMapper.toResponse(
+                imageService.getImageStatus(imageId, verbose)
+        );
+
+        return new ResponseEntity<>(response, HttpStatus.OK);
+    }
+
+
+    @Override
+    public ResponseEntity<String> pullImage(ImagePullRequestDto imagePullRequest) {
         String response;
         try {
             response = imageService.pullImage(imagePullRequest.getId(), imagePullRequest.getAnnotations());
@@ -122,8 +136,13 @@ public class GeneralRestController implements ImageApi, ImagesApi, PodsApi {
     }
 
     @Override
-    public ResponseEntity<List<ImageInformationResponse>> getImageList() {
-        List<ImageInformationResponse> response =
+    public Optional<NativeWebRequest> getRequest() {
+        return ImagesApi.super.getRequest();
+    }
+
+    @Override
+    public ResponseEntity<List<ImageInformationResponseDto>> getImageList() {
+        List<ImageInformationResponseDto> response =
                 ResponseMapper.toResponse(
                         imageService.getImages()
                 );
